# plum-ai-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONTRACTS.md  EVAL_REPORT.md
evals/: report.json  report.md
scripts/: parse_one.py  process_claim.py  run_evals.py  run_graph.py  run_test_cases.py  ui.py
src/claims_processor/claim_assembler/: assemble.py  checks.py
src/claims_processor/clients/: llm_adapters.py
src/claims_processor/core/: config.py
src/claims_processor/document_extractor/: classifier.py  exceptions.py  extractor.py  image_utils.py  parse.py  pdf_utils.py  tables.py
src/claims_processor/fraud_detector/: detect.py  signals.py
src/claims_processor/models/: claim.py  decision.py  documents.py  final.py  fraud.py
src/claims_processor/observability/: __init__.py  trace.py
src/claims_processor/orchestrator/: graph.py  pipeline.py
src/claims_processor/prompts/: classifier_prompt.py  extractor_prompts.py
src/claims_processor/rules_engine/: evaluate.py  financials.py  rules.py
tests/: test_claim_assembler.py  test_classifier.py  test_config.py  test_documents.py  test_extractor_utils.py  test_fraud_detector.py  test_graph.py  test_llm_adapters.py  test_orchestrator.py  test_parse.py  test_rules_engine.py  test_trace.py
tests/fixtures/: make_fixtures.py
