[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-processor"
version = "0.1.0"
description = "Health Insurance Claims Processing System — Plum AI Engineer Assignment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
